<resources>
    <string name="app_name">Каталог музеев Москвы</string>
    <string name="name"> Разработчик: Рекун Д.А., группа РИБО-02-21</string>
    <string name="enter_app">Вход в приложение</string>
    <string name="enter">Войти</string>
    <string name="login">Логин</string>
    <string name="password">Пароль</string>
    <string name="result">Результат</string>
    <string name="address">Адрес</string>
    <string name="telephone">Номер телефона</string>
    <string name="website">Сайт</string>
</resources>