<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:gravity="center"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="70dp"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="205dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="105dp"
            android:layout_marginBottom="10dp"
            android:layout_gravity="right"
            android:text="@string/enter_app"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etLogin"
            android:layout_width="195dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginHorizontal="10dp"
            android:background="#30ffffff"
            android:drawablePadding="15dp"
            android:hint="@string/login"
            android:padding="15dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="195dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_margin="10dp"
            android:background="#30ffffff"
            android:drawablePadding="15dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="15dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />

        <Button
            android:id="@+id/btnEnter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="90dp"
            android:layout_marginRight="50dp"
            android:backgroundTint="@color/green"
            android:text="@string/enter"
            android:textSize="20sp"
            android:textStyle="bold"
            app:iconTint="#86F407" />

        <TextView
            android:id="@+id/tvResult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:hint="@string/result" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="15dp"
        android:gravity="center"
        android:text="@string/name" />

</RelativeLayout>